<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HelpActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_height="wrap_content">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rasoi_app_guide"
        android:textSize="32sp"
        android:textAllCaps="true"
        android:layout_marginTop="8dp"
        android:textStyle="bold"
        android:textColor="@color/gold_text_color"
        android:layout_gravity="center_horizontal"
        tools:layout_editor_absoluteX="176dp"
        tools:layout_editor_absoluteY="33dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Updated June 2020"
        android:textStyle="italic"
        android:layout_margin="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help_description"
        android:layout_gravity="center_horizontal"
        android:layout_margin="16dp"
        android:textSize="18sp"
        android:textStyle="bold"/>


    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="What versions of the Android Operating System is the app available for?"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textColor="@color/gold_text_color"
        android:textSize="24sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Version 8.0 and above"
        android:layout_margin="16dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="4dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="How can I add items to my list?"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textColor="@color/gold_text_color"
        android:textSize="24sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/how_to_add_HELP"
        android:layout_margin="16dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="4dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="How can I manage or remove items from my list?"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textColor="@color/gold_text_color"
        android:textSize="24sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manage_remove_HELP"
        android:layout_margin="16dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="4dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="What kind of analytics are provided?"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textColor="@color/gold_text_color"
            android:textSize="24sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/analytics_HELP"
            android:layout_margin="16dp" />

    </LinearLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_Home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/fab_color"
        android:src="@drawable/ic_home_black_24dp"
        app:backgroundTint="@color/fab_color"
        android:layout_alignParentEnd="false"
        android:layout_alignParentRight="false"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"/>


</RelativeLayout>